tests/baselines/reference/parserMemberVariableDeclaration5.errors.txt
tests/cases/conformance/parser/ecmascript5/MemberVariableDeclarations/parserMemberVariableDeclaration5.ts(2,11): error TS2611: Ambient property declarations must override a property in a base class.


==== tests/cases/conformance/parser/ecmascript5/MemberVariableDeclarations/parserMemberVariableDeclaration5.ts (1 errors) ====
    class C {
      declare Foo;
              ~~~
!!! error TS2611: Ambient property declarations must override a property in a base class.
    }